--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Mobile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Sigmar&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+
+    <header id="head_site">
+        <img src="./img/banner.png" alt="Banner">
+    </header>
+    <!-- /#head_site -->
+
+    <main id="main_site">
+       <h1>
+        Group Chat that-s all fun e Games
+       </h1>
+        <p>
+            Discord is great for playing games and chilling with friends, or even building a worldwide community. Customize your own space to talk, play, and hang out.
+        </p>
+        <button class="download_button">
+             <i class="bi bi-cloud-download"></i> Download for Windows
+        </button>
+        <button class="open_in_browser">
+            Open Discord in your browser
+        </button>
+        
+    </main>
+    <!-- /#main_site -->
 </body>
 </html>
