--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <img src="./img/banner.png" alt="Banner">
     </header>
     <!-- /#head_site -->
-
+ 
     <main id="main_site">
-       <h1>
-        Group Chat that-s all fun e Games
+
+       <h1 class="first_font">
+        Group Chat that-s all fun & Games
        </h1>
         <p>
             Discord is great for playing games and chilling with friends, or even building a worldwide community. Customize your own space to talk, play, and hang out.
@@ -32,7 +33,7 @@
         <button class="open_in_browser">
             Open Discord in your browser
         </button>
-        
+         
     </main>
     <!-- /#main_site -->
 </body>
