--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
  
     <main id="main_site">
 
-       <h1 class="first_font">
-        Group Chat that-s all fun & Games
-       </h1>
-        <p>
-            Discord is great for playing games and chilling with friends, or even building a worldwide community. Customize your own space to talk, play, and hang out.
-        </p>
-        <button class="download_button">
-             <i class="bi bi-cloud-download"></i> Download for Windows
-        </button>
-        <button class="open_in_browser">
-            Open Discord in your browser
-        </button>
-         
+        <div class="text">
+            <h1 id="sigmar_font">
+            Group Chat that-s all fun & Games
+            </h1>
+            <p id="dm_sans_font">
+                Discord is great for playing games and chilling with friends, or even building a worldwide community. Customize your own space to talk, play, and hang out.
+            </p>
+            <button class="download_button">
+                <i class="bi bi-cloud-download"></i> Download for Windows
+            </button>
+            <button class="open_in_browser">
+                Open Discord in your browser
+            </button>
+         </div>
+
     </main>
     <!-- /#main_site -->
 </body>
