--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             <button class="open_in_browser">
                 Open Discord in your browser
             </button>
+            <section class="first_section">
+                <h1 id="sigmar_font">
+                    Make your group chats more fun
+                </h1>
+                <p id="dm_sans_font">
+                    Use custom emoji, stickers, soundboard effect and more to add your personality to your voice, video, or text chat. Set your avatar and a custom status, and write your own profile to show up in chat your way
+                </p>
+                <div id="size_video">
+                    <video src="./video/video_demo.mp4"></video>
+                </div>
+            </section>
          </div>
 
     </main>
