--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
     <main id="main_site">
 
-        <div class="text">
+        <section class="text">
             <h1 id="sigmar_font">
             Group Chat that-s all fun & Games
             </h1>
@@ -35,18 +35,21 @@
             <button class="open_in_browser">
                 Open Discord in your browser
             </button>
-            <section class="first_section">
+        </section>
+        <section class="first_section">
+            
+            <div class="spasing">
                 <h1 id="sigmar_font">
                     Make your group chats more fun
                 </h1>
                 <p id="dm_sans_font">
                     Use custom emoji, stickers, soundboard effect and more to add your personality to your voice, video, or text chat. Set your avatar and a custom status, and write your own profile to show up in chat your way
                 </p>
-                <div id="size_video">
-                    <video src="./video/video_demo.mp4"></video>
-                </div>
-            </section>
-         </div>
+            </div>
+            <div id="size_video">
+                <video src="./video/video_demo.mp4"></video>
+            </div>
+        </section>
 
     </main>
     <!-- /#main_site -->
