discord icon okey

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header id="head_site">
-        <img src="./img/banner.png" alt="Banner">
+        <img src="./img/banner.png" class="banner">
     </header>
     <!-- /#head_site -->
  
@@ -37,7 +37,7 @@
             </button>
         </section>
         <section class="first_section">
-            
+            <img src="./img/discord_cube.png" class="discord_cube">
             <div class="spasing">
                 <h1 id="sigmar_font">
                     Make your group chats more fun
