--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
                 <video src="./video/video_demo.mp4"></video>
             </div>
         </section>
+        <section class="first_section">
+            <img src="./img/eyes.png" class="discord_cube">
+            <div class="spasing">
+                <h1 id="sigmar_font">
+                    Make your group chats more fun
+                </h1>
+                <p id="dm_sans_font">
+                    Use custom emoji, stickers, soundboard effect and more to add your personality to your voice, video, or text chat. Set your avatar and a custom status, and write your own profile to show up in chat your way
+                </p>
+            </div>
+            <div id="size_video">
+                <video src="./video/streamer.mp4"></video>
+            </div>
+        </section>
 
     </main>
     <!-- /#main_site -->
