--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                     Use custom emoji, stickers, soundboard effect and more to add your personality to your voice, video, or text chat. Set your avatar and a custom status, and write your own profile to show up in chat your way
                 </p>
             </div>
-            <div id="size_video">
-                <video src="./video/video_demo.mp4"></video>
-            </div>
+            <video autoplay muted src="./video/video_demo.mp4" id="size_video"></video>
         </section>
         <section class="first_section">
             <img src="./img/eyes.png" class="discord_cube">
@@ -60,9 +58,7 @@
                     Use custom emoji, stickers, soundboard effect and more to add your personality to your voice, video, or text chat. Set your avatar and a custom status, and write your own profile to show up in chat your way
                 </p>
             </div>
-            <div id="size_video">
-                <video src="./video/streamer.mp4"></video>
-            </div>
+            <video autoplay muted src="./video/streamer.mp4" id="size_video">
         </section>
 
     </main>
